# api-lightning

./: .env  .env-sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.Docker.md  README.md  Rocket.toml  compose.yaml  diesel.toml  lightning.json
api/: Cargo.toml
api/src/: invoice_c_handler.rs  invoice_handler.rs  invoice_lnd_handler.rs  lib.rs  pay_handler.rs  scheduler.rs  swagger.rs  test_handler.rs  utils.rs
application/: Cargo.toml
application/src/: lib.rs  lnreport.rs  lnurl.rs
application/src/invoice/: create.rs  mod.rs  read.rs  update.rs
application/src/lightning/: invoice.rs  mod.rs  types.rs
application/src/lightning_c/: mod.rs
application/src/lightning_lnd/: mod.rs
domain/: Cargo.toml
domain/src/: lib.rs  models.rs  modelsext.rs  schema.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2024-02-17-035722_invoice/: down.sql  up.sql
infrastructure/src/: lib.rs
shared/: Cargo.toml
shared/src/: authorization.rs  error_handler.rs  functions.rs  lib.rs  response_models.rs  settings.rs
shared/src/config/: Default.toml  Development.toml  Production.toml  Testing.toml
