[package]
name = "api"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
shared = { path = "../shared" }

actix-web = "4.3.1"
actix-rt = "2.8.0"
serde_json = "1.0.88"
listenfd = "1.0.1"
dotenvy = "0.15.6"

validator = "0.16.0"
validator_derive = "0.16.0"
utoipa = { features = ["actix_extras"], version = "3.1.1" }
utoipa-swagger-ui = { features = ["actix-web"], version = "3.1.1" }

tokio = { version = "0.2", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
lazy_static = "1.4"