[package]
name = "api"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }
application = { path = "../application" }

actix-web = "4.3.1"
actix-rt = "2.8.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.88"
listenfd = "1.0.1"
dotenvy = "0.15.6"

diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}
diesel_migrations = "2.1.0"
migrations_macros = "2.1.0"

tokio = { version = "1.23.0", features = ["full"] }

chrono = "0.4.23"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

utoipa = { features = ["actix_extras"], version = "3.1.1" }
utoipa-swagger-ui = { features = ["actix-web"], version = "3.1.1" }

bigdecimal = { version = "0.3.0", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
anyhow = "1.0"