[package]
name = "application"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }
shared = { path = "../shared" }

dotenv = "0.15.0"
base64 = "0.13"
hex = "0.4.3"
log = "0.4"
anyhow = "1.0"
bytes = "1"

futures-util = { version = "0.3", features = [ "sink" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.7", features = ["codec"] }

tonic = { version = "0.7.2", features = ["compression"] }
lnd_grpc_rust = "2.2.0"
chrono = "0.4.23"
lightning-invoice = "0.22.0"
nostr-sdk = "0.24.0"
cln-rpc = "0.1.6"
bitcoin = { version = "0.30.1", features = [ "serde" ] }

simple-home-dir = "0.2.0"
rand = "0.8.5"
easy-hasher = "2.2.1"
uuid = { version = "1.4.1", features = ["v4"]}
openssl = { version = "0.10.57", features = ["vendored"] }
pretty_env_logger = "0.4.0"
env_logger = "0.10"
