[package]
name = "application"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }

dotenv = "0.15.0"
base64 = "0.13"
hex = "0.4.3"
anyhow = "1.0"
bytes = "1"

diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

reqwest = { version = "0.11.13", features = ["json"]}
tokio = { version = "1.23.0", features = ["full"] }
tonic_openssl_lnd = "0.2.0"
lightning-invoice = "0.25.0"
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = "0.4.23"
easy-hasher = "2.2.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }