[package]
name = "application"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }

dotenv = "0.15.0"
base64 = "0.13"
hex = "0.4.3"
anyhow = "1.0"
bytes = "1"

diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

reqwest = { version = "0.11.18", features = ["json", "stream", "native-tls"]}
tokio = { version = "1.36.0", features = ["full"] }
lightning-invoice = "0.25.0"
rand = { version = "0.8.5", features = ["small_rng"] }
chrono = "0.4.23"
easy-hasher = "2.2.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

tracing = "0.1.37"

url = "2.2"

futures-util = "0.3"
futures = "0.3"