# domain/Cargo.toml

[package]
name = "domain"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.24", features = ["serde"] }
lazy_static = "1.4.0"

serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_path_to_error = "0.1.10"
serde_with = "2.3.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }

utoipa = { features = ["actix_extras"], version = "3.1.1" }
utoipa-swagger-ui = { features = ["actix-web"], version = "3.1.1" }