# domain/Cargo.toml

[package]
name = "domain"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
r2d2 = "0.8.10"
chrono = { version = "0.4.24", features = ["serde"] }

serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }

utoipa = { features = ["actix_extras"], version = "3.1.1" }
utoipa-swagger-ui = { features = ["actix-web"], version = "3.1.1" }