# infrastructure/Cargo.toml

[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

resolver = "2"


[dependencies]
shared = { path = "../shared" }

diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
r2d2 = "0.8.10"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.24", features = ["serde"] }
lazy_static = "1.4.0"
dotenvy = "0.15.6"
