[package]
name = "shared"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }

diesel = { version = "2.1.0", features = ["chrono", "postgres", "postgres_backend", "numeric", "r2d2", "uuid"]}
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"

actix-web = "4.3.1"
actix-rt = "2.8.0"

dotenv = "0.15"
base64 = "0.13"
hex = "0.4.3"
config = "0.10"
lazy_static = "1.4"
anyhow = "1.0"

jsonwebtoken = "9.2.0"

tracing = "0.1.37"